{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 49,
  "lineage": "1317d46c-c60b-2b8f-314d-0a1d67960e41",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:908027373537:vpc/vpc-0c5c8cd164df6743a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b8208bdea222ce7e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c6b9cbe0ea6a5b84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5c8cd164df6743a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce0a449339920d4f",
            "owner_id": "908027373537"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:908027373537:loadbalancer/app/robot-webhook-alb-us-east-2/d9ea34b278c2e743",
            "arn_suffix": "app/robot-webhook-alb-us-east-2/d9ea34b278c2e743",
            "desync_mitigation_mode": "defensive",
            "dns_name": "robot-webhook-alb-us-east-2-889479792.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:908027373537:loadbalancer/app/robot-webhook-alb-us-east-2/d9ea34b278c2e743",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "robot-webhook-alb-us-east-2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0702428c1e87b1354"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035639db011af6ca6"
              },
              {
                "subnet_id": "subnet-0c10a0428c3f233f6"
              },
              {
                "subnet_id": "subnet-0f4446bd3a11f729f"
              }
            ],
            "subnets": [
              "subnet-035639db011af6ca6",
              "subnet-0c10a0428c3f233f6",
              "subnet-0f4446bd3a11f729f"
            ],
            "tags": {
              "Name": "robot-webhook-alb"
            },
            "tags_all": {
              "Name": "robot-webhook-alb"
            },
            "vpc_id": "vpc-0c5c8cd164df6743a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:908027373537:listener/app/robot-webhook-alb-us-east-2/d9ea34b278c2e743/60d836a85757ebab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:908027373537:listener/app/robot-webhook-alb-us-east-2/d9ea34b278c2e743/60d836a85757ebab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:908027373537:loadbalancer/app/robot-webhook-alb-us-east-2/d9ea34b278c2e743",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:908027373537:targetgroup/robot-webhook-tg-us-east-2/173bc78b0f41ec03",
            "arn_suffix": "targetgroup/robot-webhook-tg-us-east-2/173bc78b0f41ec03",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/webhook/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:908027373537:targetgroup/robot-webhook-tg-us-east-2/173bc78b0f41ec03",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "robot-webhook-tg-us-east-2",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "robot-webhook-tg"
            },
            "tags_all": {
              "Name": "robot-webhook-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c5c8cd164df6743a"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:908027373537:security-group/sg-0702428c1e87b1354",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0702428c1e87b1354",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "robot-webhook-alb-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "908027373537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "robot-webhook-alb-sg"
            },
            "tags_all": {
              "Name": "robot-webhook-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5c8cd164df6743a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:908027373537:security-group/sg-00519567ebd962004",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00519567ebd962004",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0702428c1e87b1354"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "robot-webhook-ecs-tasks-sg-us-east-2",
            "name_prefix": "",
            "owner_id": "908027373537",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "robot-webhook-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "robot-webhook-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5c8cd164df6743a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}